client: Return NULL if set_display_name() fails

Return NULL as per the documentation rather than returning the original
file.  This prevents errors like the following, where "Permission
Denied" should be displayed:
$ gvfs-rename smb://localhost/tmp/cat dog
Rename successful. New uri: smb://localhost/tmp/cat

(gvfs-rename:1385): GLib-GObject-CRITICAL **: g_object_unref: assertion
'G_IS_OBJECT (object)' failed

https://bugzilla.gnome.org/show_bug.cgi?id=727007